--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = feb8964
+	base = d1dc847
 	trimbase = 
 	parent = release/dashing/rqt_robot_monitor
-	previous = 
+	previous = feb8964
