--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 12755cd
+	base = 049776f
 	trimbase = 
 	parent = debian/dashing/rqt_robot_monitor
-	previous = 
+	previous = 12755cd
