--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac087af
+	base = 806925d
 	trimbase = 
 	parent = release/eloquent/rqt_robot_monitor
-	previous = 
+	previous = ac087af
