--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d91f27
+	base = 319deab
 	trimbase = 
 	parent = debian/eloquent/rqt_robot_monitor
-	previous = 
+	previous = 7d91f27
