--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1eb0516
+	base = 5326141
 	trimbase = 
 	parent = debian/foxy/rqt_robot_monitor
-	previous = 
+	previous = 1eb0516
