--- a/tracks.yaml
+++ b/tracks.yaml
@@ -94,4 +94,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-visualization/rqt_robot_monitor.git
-    version: :{auto}
+    version: 1.0.1
+    version_saved: :{auto}
