--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_monitor
-	previous = 
-	base = e98d172
+	previous = e98d172
+	base = 42042a5
 	trim = 
 	trimbase = 
