--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_monitor
-	previous = 
-	base = f72962a
+	previous = f72962a
+	base = be9c618
 	trim = 
 	trimbase = 
