--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_monitor
-	previous = 
-	base = 570ce17
+	previous = 570ce17
+	base = f8c84e9
 	trim = 
 	trimbase = 
