--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,7 +102,8 @@ tracks:
     ros_distro: galactic
     vcs_type: git
     vcs_uri: https://github.com/ros-visualization/rqt_robot_monitor.git
-    version: :{auto}
+    version: 1.0.4
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
