--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.4-1": ["Mon Mar 08 2021", "Aaron Blasdel", "ablasdel@gmail.com"]}
+{"1.0.4-2": ["Tue Apr 20 2021", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.4-1": ["Mon Mar 08 2021", "Aaron Blasdel", "ablasdel@gmail.com"]}
