--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_monitor
-	previous = 
-	base = 3e44e9f
+	previous = 3e44e9f
+	base = 35a110f
 	trim = 
 	trimbase = 
