--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_monitor
-	previous = 
-	base = 625fccf
+	previous = 625fccf
+	base = cfd4c98
 	trim = 
 	trimbase = 
