--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_monitor
-	previous = 
-	base = c6c163c
+	previous = c6c163c
+	base = b4341e6
 	trim = 
 	trimbase = 
