--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_monitor
-	previous = 
-	base = 2bb6cd1
+	previous = 2bb6cd1
+	base = 10dd32c
 	trim = 
 	trimbase = 
