--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_monitor
-	previous = 
-	base = b6e34b4
+	previous = b6e34b4
+	base = 8d66f33
 	trim = 
 	trimbase = 
