--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_monitor
-	previous = 
-	base = 279a5c7
+	previous = 279a5c7
+	base = 8220427
 	trim = 
 	trimbase = 
