--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_monitor
-	previous = 
-	base = bd99345
+	previous = bd99345
+	base = bae2fe7
 	trim = 
 	trimbase = 
