--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_monitor
-	previous = 
-	base = 7a83e4c
+	previous = 7a83e4c
+	base = 98e4f12
 	trim = 
 	trimbase = 
