--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_monitor
-	previous = 
-	base = 70be6f7
+	previous = 70be6f7
+	base = 99c9c76
 	trim = 
 	trimbase = 
