--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_monitor
-	previous = 
-	base = 52e0974
+	previous = 52e0974
+	base = 9ba90e1
 	trim = 
 	trimbase = 
