--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_monitor
-	previous = 
-	base = 0b9db81
+	previous = 0b9db81
+	base = 80ae11f
 	trim = 
 	trimbase = 
