--- a/tracks.yaml
+++ b/tracks.yaml
@@ -180,5 +180,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-visualization/rqt_robot_monitor.git
-    version: 1.0.5
-    version_saved: :{auto}
+    version: :{auto}
