--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.5-3": ["Wed Mar 06 2024", "Aaron Blasdel", "ablasdel@gmail.com"]}
+{"1.0.5-4": ["Fri Apr 19 2024", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.5-3": ["Wed Mar 06 2024", "Aaron Blasdel", "ablasdel@gmail.com"]}
