--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rqt_robot_monitor</name>
-  <version>1.0.5</version>
+  <version>1.0.6</version>
   <description>rqt_robot_monitor displays diagnostics_agg topics messages that
    are published by <a href = "http://www.ros.org/wiki/diagnostic_aggregator">diagnostic_aggregator</a>.
    rqt_robot_monitor is a direct port to rqt of
@@ -20,7 +20,6 @@
 
   Currently re-usable API to other pkgs are not explicitly provided.
   </description>
-  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
   <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
 
@@ -35,6 +34,7 @@
   <author>Ze'ev Klapow</author>
   <author>Kevin Watts</author>
   <author>Josh Faust</author>
+  <author>Aaron Blasdel</author>
 
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
