--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.5-2": ["Tue Apr 19 2022", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.5-1": ["Wed Mar 16 2022", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.4-2": ["Tue Feb 08 2022", "Aaron Blasdel", "ablasdel@gmail.com"]}
+{"1.0.6-1": ["Wed May 15 2024", "Arne Hitzmann", "arne.hitzmann@gmail.com"], "1.0.5-2": ["Tue Apr 19 2022", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.5-1": ["Wed Mar 16 2022", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.4-2": ["Tue Feb 08 2022", "Aaron Blasdel", "ablasdel@gmail.com"]}
