--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.5-3": ["Thu Apr 20 2023", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.5-2": ["Tue Mar 21 2023", "Aaron Blasdel", "ablasdel@gmail.com"]}
+{"1.0.6-1": ["Wed May 15 2024", "Arne Hitzmann", "arne.hitzmann@gmail.com"], "1.0.5-3": ["Thu Apr 20 2023", "Aaron Blasdel", "ablasdel@gmail.com"], "1.0.5-2": ["Tue Mar 21 2023", "Aaron Blasdel", "ablasdel@gmail.com"]}
